--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,20 +1,13 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
-
+name: Docker Build Deploy
 on:
   push:
-    branches: [ main ]
-
+    branches: [main]
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: run shell script
-      run: echo commit hash is ${{ github.sha}}
-    -name: build the docker image
-      run: docker build . --file Dockerfile --tag my-image-name:${{ github.sha}}
+      - uses: actions/checkout@v3
+      - name: run shell script
+        run: echo commit hash is ${{ github.sha }}
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:${{ github.sha }}
