--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:11
 ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} user-service.jar
-ENTRYPOINT ["java","-jar","/user-service.jar"]
+COPY ${JAR_FILE} user-service-0.0.1.jar
+ENTRYPOINT ["java","-jar","/user-service-0.0.1.jar"]
 EXPOSE 9002
