--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:11
 ARG JAR_FILE=target/*.jar
-COPY target/user-service-0.0.1.jar user-service.jar
+COPY target/user-service.jar user-service.jar
 ENTRYPOINT ["java","-jar","/user-service.jar"]
 EXPOSE 9002
