--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -46,7 +46,7 @@ jobs:
     - name: kubectl - Google Cloud GKE cluster.
       uses: ameydev/gke-kubectl-action@master
       env:
-        PROJECT_ID: ${{ env.PROJECT_ID }}
+        PROJECT_ID: ctse-350307
         APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         CLUSTER_NAME: ${{ env.GKE_CLUSTER }}
         ZONE_NAME: ${{ env.GKE_ZONE }}
