--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -1,41 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  generation: 1
   labels:
     app: ctse-user-service
   name: ctse-user-service
-  namespace: default
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: ctse-user-service
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: ctse-user-service
     spec:
       containers:
-      - image: tiranharsha/user-service:main-93854b9
+      - name: user-service
+        image: tiranharsha/user-service:main-93854b9
         imagePullPolicy: Always
-        name: user-service
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
         ports:
         - containerPort: 9002
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
-status: {}
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ctse-user-service
+spec:
+  ports:
+  - targetPort: 9002
+    port: 9002
+  selector:
+    app: ctse-user-service
