--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -38,17 +38,70 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-  Deploy:
+  deployment:
+    name: Deploy backend to cluster
+    runs-on: 'ubuntu-latest'
     needs: build
-    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: kubectl - Google Cloud GKE cluster.
-      uses: ameydev/gke-kubectl-action@master
+    - name: Checkout working branch
+      uses: actions/checkout@v1
+
+    - name: Set Release version
+      run: |
+        echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF} | 
+                            sed -e "s/refs\/tags\///g" | sed -e "s/\//-/g")
+    - name: Cluster env for production
+      if: "!github.event.release.prerelease"
+      run: |
+        echo ::set-env name=CLUSTER_ENV::prod
+    - name: Cluster env for staging/dev
+      if: "github.event.release.prerelease"
+      run: |
+        BRANCH=$(git branch -r --contains ${GITHUB_SHA} | grep "")
+        MASTER_BRANCH_NAME='origin/main'
+        if [[ "$BRANCH" == *"$MASTER_BRANCH_NAME"* ]]; then
+          echo ::set-env name=CLUSTER_ENV::stag
+        else
+          echo ::set-env name=CLUSTER_ENV::dev
+        fi
+    - name: Set Cluster credentials
+      run: |
+        echo ::set-env name=CLUSTER_NAME::acme-gke-${{ env.GKE_CLUSTER }}
+        echo ::set-env name=CLUSTER_ZONE::us-central1-c
+        echo ::set-env name=PROJECT_NAME::ctse-350307
+    - name: Install kubectl
+      run: |
+        sudo apt-get install kubectl
+    - name: Install helm
+      run: |
+        curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+        chmod 700 get_helm.sh
+        ./get_helm.sh
+    - name: Deploy Release on cluster
       env:
-        PROJECT_ID: ctse-350307
-        APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-        CLUSTER_NAME: ${{ env.GKE_CLUSTER }}
-        ZONE_NAME: ${{ env.GKE_ZONE }}
-      with:
-        args: apply -f k8s/
+        GCLOUD_KEY: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+      run: |
+        echo "$GCLOUD_KEY" | base64 --decode > ${HOME}/gcloud.json
+        gcloud auth activate-service-account --key-file=${HOME}/gcloud.json
+        gcloud auth configure-docker
+        gcloud container clusters get-credentials \
+        ${{ env.CLUSTER_NAME }} --zone 
+        ${{ env.CLUSTER_ZONE }} --project ${{ env.PROJECT_NAME }}
+        # install/upgrade helm chart
+        helm upgrade --install backend ./deploy/helm/backend \
+                  --values ./deploy/helm/backend/env.values.${{ env.CLUSTER_ENV }}.yaml \
+                  --set env_values.image_version=${{ env.RELEASE_VERSION }
+#   Deploy:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@master
+#     - name: kubectl - Google Cloud GKE cluster.
+#       uses: ameydev/gke-kubectl-action@master
+#       env:
+#         PROJECT_ID: ctse-350307
+#         APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+#         CLUSTER_NAME: ${{ env.GKE_CLUSTER }}
+#         ZONE_NAME: ${{ env.GKE_ZONE }}
+#       with:
+#         args: apply -f k8s/
