--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Deploy Release on cluster
       env:
         GCLOUD_KEY: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-      run: |
+      run: 
         echo "$GCLOUD_KEY" | base64 --decode > ${HOME}/gcloud.json
         gcloud auth activate-service-account --key-file=${HOME}/gcloud.json
         gcloud auth configure-docker
