--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -1,14 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: ctse-user-service
   name: ctse-user-service
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: ctse-user-service
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  minReadySeconds: 5
   template:
     metadata:
       labels:
@@ -16,19 +19,57 @@ spec:
     spec:
       containers:
       - name: user-service
-        image: tiranharsha/user-service:main-93854b9
-        imagePullPolicy: Always
+        image: tiranharsha/user-service
         ports:
         - containerPort: 9002
-
+        resources:
+          requests:
+            cpu: 100m
+          limits:
+            cpu: 100m
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: ctse-user-service
 spec:
+  type: LoadBalancer
   ports:
-  - targetPort: 9002
-    port: 9002
+    - port: 9002
+      targetPort: 9002
   selector:
     app: ctse-user-service
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   labels:
+#     app: ctse-user-service
+#   name: ctse-user-service
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: ctse-user-service
+#   template:
+#     metadata:
+#       labels:
+#         app: ctse-user-service
+#     spec:
+#       containers:
+#       - name: user-service
+#         image: tiranharsha/user-service:main-93854b9
+#         imagePullPolicy: Always
+#         ports:
+#         - containerPort: 9002
+
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: ctse-user-service
+# spec:
+#   ports:
+#   - targetPort: 9002
+#     port: 9002
+#   selector:
+#     app: ctse-user-service
